# solverforge-ui

./: .gitignore  .versionrc.json  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  PRD.md  README.md  RELEASE.md  WIREFRAME.md  eslint.config.js  package-lock.json  package.json
.forgejo/workflows/: ci.yml  release.yml
.github/workflows/: ci.yml  publish-crates.yml  release.yml
css-src/: 00-tokens.css  01-reset.css  02-typography.css  03-layout.css  04-header.css  05-statusbar.css  06-buttons.css  07-modal.css  08-table.css  09-badges.css  10-cards.css  11-tooltip.css  12-footer.css  13-scrollbars.css  14-animations.css  15-rail-resources.css  16-rail-blocks.css  17-gantt-layout.css  18-gantt-bars.css  19-rail-timeline.css
demos/: README.md  full-surface.html  index.html  rail.html  timeline-dense.html  timeline.html
js-src/: 00-core.js  01-score.js  02-colors.js  03-buttons.js  04-header.js  05-statusbar.js  06-modal.js  07-tabs.js  08-table.js  09-toast.js  10-backend.js  11-solver.js  12-api-guide.js  13-rail.js  13a-rail-timeline.js  14-gantt.js  15-footer.js
scripts/: cargo-version.js  demo_server.py  sync-version.py  verify-package.sh
src/: lib.rs
static/sf/: sf.0.4.2.js  sf.0.4.3.css  sf.0.4.3.js  sf.css  (+5 more)
tests/: accessibility-regressions.test.js  backend-contract.test.js  button-rail-knobs.test.js  core-widgets.test.js  demo-browser-check.js  frontend.test.js  instance-local-dom.test.js  map-module.test.js  rail-timeline.test.js  safe-html-rendering.test.js  solver-lifecycle.test.js  solver-startup-queue.test.js  solver-terminal-state.test.js
(+4 files in other folders)
