[package]
name = "solverforge-ui"
version = "0.4.1"
edition = "2021"
rust-version = "1.75"
description = "Frontend component library for SolverForge constraint-optimization applications"
license = "Apache-2.0"
repository = "https://github.com/SolverForge/solverforge-ui"
readme = "README.md"
keywords = ["solverforge", "ui", "axum", "embedded-assets", "scheduling"]
categories = ["web-programming", "gui"]
exclude = [
    "screenshots/",
    "css-src/",
    "js-src/",
    "WIREFRAME.md",
    "scripts/",
    ".versionrc.json",
]

[dependencies]
axum = "0.8"
include_dir = "0.7"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
